# ai-tool-intelligence

./: .env.example  .gitignore  AWS_SETUP.md  DEPENDENCY_MANAGEMENT.md  DOCUMENTATION_INDEX.md  FIX_GIT_STAGING.md  Makefile  NEW_MACHINE_CHECKLIST.md  NPM_TROUBLESHOOTING.md  README.md  SBOM.spdx  STABILITY_ENHANCEMENTS.md  STABILITY_FEATURES.md  WINDOWS_INSTALLATION_GUIDE.md  WINDOWS_READY.md  WINDOWS_SETUP.md  monitor_system.py  pyproject.toml  requirements-ai.txt  requirements-dev.txt  requirements-minimal.txt  requirements.txt  setup-windows-choose.bat  setup-windows-minimal.bat  setup-windows-simple.bat  setup.py  setup.sh  start_stable.py  start_windows.bat
.claude/: settings.local.json
.github/workflows/: test.yml
backend/: .env.example  Makefile  TESTING.md  app.py  aws_credential_validator.py  enhanced_strands_agent.py  enhanced_strands_tools.py  enhanced_tools_additional.py  pytest.ini  requirements-test.txt  requirements.txt  run_tests.py  strands_research_tools.py
backend/admin_interface/: README.md  admin_api.py  admin_cli.py  admin_manager.py
backend/batch_processing/: competitive_monitor.py
backend/change_detection/: .env.example  README.md  alert_cli.py  alert_integration.py  alert_manager.py  example_alert_rule.json  test_alert_system.py
backend/competitive_analysis/: competitive_cli.py  competitive_integration.py  market_analyzer.py  trend_tracker.py
backend/config/: config_manager.py
backend/data_curation/: README.md  curation_engine.py
backend/data_validation/: README.md  quality_cli.py  quality_integration.py  quality_scorer.py  test_quality_system.py
backend/deployment/: production_database_guide.md
backend/logging_monitoring/: README.md  monitoring_api.py  monitoring_dashboard.py  system_logger.py
backend/migrations/: database_migration_toolkit.py  migrate_to_enhanced_schema.py  migrate_to_postgresql.py
backend/models/: enhanced_schema.py
backend/src/ai_tool_intelligence/: __init__.py  __main__.py  main.py
backend/src/ai_tool_intelligence/api/middleware/: security_middleware.py
backend/src/ai_tool_intelligence/config/: apis.py  database.py  settings.py
backend/src/ai_tool_intelligence/core/admin/: admin_api.py  admin_cli.py  admin_manager.py
backend/src/ai_tool_intelligence/core/competitive/: README.md  competitive_cli.py  competitive_integration.py  market_analyzer.py  trend_tracker.py
backend/src/ai_tool_intelligence/core/research/: additional_tools.py  quality_cli.py  quality_integration.py  quality_scorer.py  research_tools.py  strands_tools.py  test_quality_system.py
backend/src/ai_tool_intelligence/services/: monitoring_api.py  monitoring_dashboard.py  strands_service.py  system_logger.py
backend/src/ai_tool_intelligence/utils/: error_handler.py
backend/stability/: windows_stability.py
backend/tests/: __init__.py  conftest.py  test_all_tools_integration.py  test_api_endpoints.py  test_data_fixtures.py  test_database_integration.py  test_enhanced_web_scraper.py  test_free_apis_config.py  test_github_analyzer.py
backend/utils/: enhanced_web_scraper.py
docs/: BUSINESS_OVERVIEW.md  PRD.md  README.md
docs/api/: endpoints.md
docs/deployment/: production.md
docs/development/: architecture.md  changelog.md  project-status.md
docs/features/: feature-parity.md
docs/setup/: ONBOARDING_COMPLETE_GUIDE.md  TROUBLESHOOTING_COMPLETE.md  aws-sso.md  installation.md  new-machine-setup.md  quick-start.md  troubleshooting.md  ubuntu-setup.md  windows-compatibility.md  windows-setup.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
scripts/: bundle-dependencies.bat  bundle-dependencies.py  diagnose-artifactory.ps1  fix-npm-artifactory.bat  monitor.sh  npm-fallback-install.bat  research.sh  start.sh  troubleshoot-npm.bat
scripts/deployment/: backup.sh
scripts/development/: start.sh  test-application.py
scripts/setup/: Launch.bat  Manage.ps1  Research.ps1  Reset.ps1  Status.ps1  install.sh
strands-batch/: .env.example  README.md  cli.py  config.py  models.py  requirements.txt  strands_agent.py  tools_example.json
tests/: global-setup.ts  global-teardown.ts  package.json  playwright.config.ts
tests/e2e/: admin-interface.spec.ts  auth.setup.ts  competitive-analysis.spec.ts  research-functionality.spec.ts  tool-management.spec.ts
tests/performance/: load-testing.spec.ts
ubuntu/: backup.sh  config.json  logs.sh  research.sh  reset.sh  setup.sh  start.sh  status.sh  stop.sh
windows/: Backup.ps1  Logs.ps1  README.md  Reset.ps1  Setup.ps1  Start-Validated.ps1  Start.ps1  Stop.ps1  setup-windows.bat  start-windows.bat  stop-windows.bat
